--- a/tes_konten/index.html
+++ b/tes_konten/index.html
@@ -1,9 +1,7 @@
 <html>
 
 <head>
-    <title>
-        Komunitas Sobat LS
-    </title>
+    <title>Komunitas Sobat LS</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&amp;display=swap" rel="stylesheet" />
     <style>
@@ -11,12 +9,21 @@
             font-family: 'Roboto', sans-serif;
             background: linear-gradient(135deg, #6a11cb, #2575fc);
             margin: 0;
-            padding: 0;
+            padding: 20px;
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
+            min-height: 100vh;
             color: #ffffff;
+        }
+
+        .content-wrapper {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            max-width: 1200px;
+            width: 100%;
+            justify-content: center;
         }
 
         .container {
@@ -24,9 +31,13 @@
             border-radius: 15px;
             box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
             overflow: hidden;
-            max-width: 900px;
-            width: 100%;
+            flex: 1 1 calc(40% - 20px);
+            /* Mengurangi lebar kontainer menjadi 40% */
+            display: flex;
+            flex-direction: column;
             text-align: center;
+            max-width: 400px;
+            /* Mengurangi ukuran maksimum menjadi 400px */
         }
 
         .image-section {
@@ -73,24 +84,24 @@
         }
 
         .content-section {
-            padding: 30px;
+            padding: 20px;
         }
 
         .content-section h1 {
-            font-size: 28px;
+            font-size: 20px;
             font-weight: 700;
-            margin: 0 0 20px;
+            margin: 0 0 10px;
             color: #333;
         }
 
         .content-section p {
-            font-size: 16px;
+            font-size: 14px;
             color: #555;
-            margin: 0 0 20px;
+            margin: 0 0 15px;
         }
 
         .features {
-            margin: 20px 0;
+            margin: 10px 0;
         }
 
         .feature {
@@ -103,21 +114,21 @@
         .feature i {
             color: #2575fc;
             margin-right: 10px;
-            font-size: 20px;
+            font-size: 16px;
         }
 
         .feature span {
-            font-size: 16px;
+            font-size: 14px;
             color: #333;
         }
 
         .join-button {
             background: linear-gradient(135deg, #6a11cb, #2575fc);
             color: #ffffff;
-            padding: 15px 30px;
+            padding: 10px 20px;
             border: none;
             border-radius: 30px;
-            font-size: 16px;
+            font-size: 14px;
             font-weight: bold;
             cursor: pointer;
             text-transform: uppercase;
@@ -131,9 +142,12 @@
         }
 
         @keyframes float {
-            0%, 100% {
+
+            0%,
+            100% {
                 transform: translateY(0);
             }
+
             50% {
                 transform: translateY(-5px);
             }
@@ -142,39 +156,74 @@
 </head>
 
 <body>
-    <div class="container">
-        <div class="image-section">
-            <img alt="A person working on a laptop with a plant in the background"
-                src="gambar.jpg" />
-            <div class="badge-container">
-                <div class="badge">
-                    <i class="fas fa-check-circle"></i>
-                    <span>Kelas Baru Tersedia!</span>
+    <div class="content-wrapper">
+        <div class="container">
+            <div class="image-section">
+                <img alt="A person working on a laptop with a plant in the background" src="gambar.jpg" />
+                <div class="badge-container">
+                    <div class="badge">
+                        <i class="fas fa-check-circle"></i>
+                        <span>Kelas Baru Tersedia!</span>
+                    </div>
+                    <div class="badge">
+                        <i class="fas fa-gift"></i>
+                        <span>Hooray! Kamu mendapatkan kelas gratis</span>
+                    </div>
                 </div>
-                <div class="badge">
-                    <i class="fas fa-gift"></i>
-                    <span>Hooray! Kamu mendapatkan kelas gratis</span>
+            </div>
+            <div class="content-section">
+                <h1>Komunitas Sobat LS</h1>
+                <p>Komunitas ini hadir untuk siapapun kamu yang bergabung dan dibimbing #Sampaijadibisa.</p>
+                <div class="features">
+                    <div class="feature">
+                        <i class="fas fa-bullhorn"></i>
+                        <span>Informasi mengenai kelas Luarsekolah</span>
+                    </div>
+                    <div class="feature">
+                        <i class="fas fa-calendar-alt"></i>
+                        <span>Informasi mengenai event Luarsekolah</span>
+                    </div>
+                    <div class="feature">
+                        <i class="fas fa-gift"></i>
+                        <span>Gift away voucher kelas gratis</span>
+                    </div>
                 </div>
+                <button class="join-button">Gabung Sekarang</button>
             </div>
         </div>
-        <div class="content-section">
-            <h1>Komunitas Sobat LS</h1>
-            <p>Komunitas ini hadir untuk siapapun kamu yang bergabung dan dibimbing #Sampaijadibisa.</p>
-            <div class="features">
-                <div class="feature">
-                    <i class="fas fa-bullhorn"></i>
-                    <span>Informasi mengenai kelas Luarsekolah, Prakerja, dan ISW</span>
-                </div>
-                <div class="feature">
-                    <i class="fas fa-calendar-alt"></i>
-                    <span>Informasi mengenai event Luarsekolah</span>
-                </div>
-                <div class="feature">
-                    <i class="fas fa-gift"></i>
-                    <span>Gift away voucher kelas gratis</span>
+        <div class="container">
+            <div class="image-section">
+                <img alt="A person working on a laptop with a plant in the background" src="gambar.jpg" />
+                <div class="badge-container">
+                    <div class="badge">
+                        <i class="fas fa-check-circle"></i>
+                        <span>Kelas Baru Tersedia!</span>
+                    </div>
+                    <div class="badge">
+                        <i class="fas fa-gift"></i>
+                        <span>Hooray! Kamu mendapatkan kelas gratis</span>
+                    </div>
                 </div>
             </div>
-            <button class="join-button">Gabung Sekarang</button>
+            <div class="content-section">
+                <h1>Komunitas Sobat LS</h1>
+                <p>Komunitas ini hadir untuk siapapun kamu yang bergabung dan dibimbing #Sampaijadibisa.</p>
+                <div class="features">
+                    <div class="feature">
+                        <i class="fas fa-bullhorn"></i>
+                        <span>Informasi mengenai kelas Luarsekolah</span>
+                    </div>
+                    <div class="feature">
+                        <i class="fas fa-calendar-alt"></i>
+                        <span>Informasi mengenai event Luarsekolah</span>
+                    </div>
+                    <div class="feature">
+                        <i class="fas fa-gift"></i>
+                        <span>Gift away voucher kelas gratis</span>
+                    </div>
+                </div>
+                <button class="join-button">Gabung Sekarang</button>
+            </div>
         </div>
     </div>
 </body>
